# mujoco-rs

./: .gitmodules  Cargo.toml  README.md  justfile  pixi.toml
.github/workflows/: rust.yml
mujoco/: Cargo.toml  README.md
mujoco-sys/: Cargo.toml  README.md  binding.h  build.rs  generate_from_introspect.py  update-ffi.sh  update-submodules.sh
mujoco-sys/src/: lib.rs
mujoco/examples/: demo.rs
mujoco/src/: data.rs  data_functions.rs  data_struct.rs  lib.rs  math.rs  model.rs  model_struct.rs  spec.rs
mujoco/src/tests/: malformed.xml  rrr.xml
